--- a/index.html
+++ b/index.html
@@ -969,6 +969,7 @@
         >
         <button
           id="createBtn"
+          onclick="generateFaiChun()"
           class="generate-button"
         >
           Create
