--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
     </div>
 
     <div class="generator-container">
-      <h1 class="title">Custom Fai Chun</h1>
+      <h1 class="title">寫春聯</h1>
 
             <!-- New container for both selectors -->
       <div id="styleSelectors">
