--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         margin-right: 6rem;
       }
       .title {
-        font-size: 1.75rem;
+        font-size: 3.75rem;
         font-weight: 700;
         margin-bottom: 1rem;
         color: #1f2937;
@@ -846,7 +846,7 @@
     </div>
 
     <div class="generator-container">
-      <h1 class="title">Custom Fai Chun</h1>
+      <h1 class="title">寫春聯</h1>
 
             <!-- New container for both selectors -->
       <div id="styleSelectors">
