--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         font-size: 3.75rem;
         font-weight: 700;
         margin-bottom: 1rem;
-        color: #1f2937;
+        color: #6b7280;
       }
       #chineseText {
         padding: 0.75rem;
