--- a/index.html
+++ b/index.html
@@ -611,6 +611,10 @@
         width: 100%;
         aspect-ratio: 36 / 10;
       }
+      #fullscreenContent .fai-chun.vertical img {
+          max-width: 100%;
+          max-height: 100%;
+      }
 
 
       /* Actions are now a regular flex item, NOT positioned absolute */
