--- a/index.html
+++ b/index.html
@@ -1276,6 +1276,15 @@
           });
                     // --- FINAL, CORRECTED PREVIEW LISTENERS ---
 
+          // --- ADD THIS NEW LISTENER FOR THE BACK BUTTON ---
+          window.addEventListener('popstate', (event) => {
+              // Check if the preview is currently visible
+              if (fullscreenPreview.classList.contains('visible')) {
+                  // If it is, close it.
+                  hidePreview();
+              }
+          });
+          
           // A single, clean function to hide the preview and its actions
           function hidePreview() {
               fullscreenPreview.classList.remove('visible');
@@ -1430,6 +1439,7 @@
                   fullscreenPreview.classList.add('visible');
                   // IMPORTANT: Ensure action buttons are hidden initially
                   fullscreenActions.classList.remove('visible');
+                  history.pushState({preview: 'open'}, 'Preview');
               }
           }, 500); // 50ms delay is enough for the DOM to update
       }
