--- a/index.html
+++ b/index.html
@@ -634,6 +634,7 @@
         transform: translate(-50%, -50%) scale(0.9) translateY(20px);
         transition: opacity 0.3s ease, transform 0.3s ease;
         cursor: default;
+        z-index: 9999;
       }
 
       #fullscreenActions.visible {
