--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
                 width: 100%;
                 max-width: 36rem;
                 height: 10rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
             }
 
             /* REPLACE IT WITH THIS */
@@ -1409,15 +1413,6 @@
                 const wrapperDiv = document.createElement('div');
                 wrapperDiv.className = 'char-wrapper';
 
-                if (orientation === 'vertical' && characters.length > 0) {
-                    wrapperDiv.style.height = '10%';
-                    // Prevent flexbox from shrinking the item, giving html2canvas a stable height.
-                    wrapperDiv.style.flexShrink = '0';
-                } else {
-                    // For horizontal, allow the item to shrink if needed.
-                    wrapperDiv.style.minWidth = '0';
-                }
-
                 const loadPromise = new Promise(resolve => {
                     img.onload = resolve;
                 });
@@ -1426,12 +1421,7 @@
                 // This logic overrides your static CSS to handle dynamic padding and fix save issues.
                 if (orientation === 'vertical' && characters.length > 0) {
                     // FIX for Vertical Overflow & Squishing:
-                    // Calculate the available height after padding is removed.
-                    const availableHeight = 100 - paddingTop - paddingBottom;
-                    // Divide that height evenly among all characters.
-                    const charHeight = availableHeight / characters.length;
-                    // Apply this as an inline style to override the CSS from `sizingStyles`.
-                    wrapperDiv.style.height = charHeight + '%';
+                    wrapperDiv.style.height = '10%';
                     // Prevent flexbox from shrinking the item, giving html2canvas a stable height.
                     wrapperDiv.style.flexShrink = '0';
                 } else {
@@ -1494,6 +1484,24 @@
         .fai-chun.vertical .char-count-5 .char-wrapper { height: calc(65% / 5); }
         .fai-chun.vertical .char-count-6 .char-wrapper { height: calc(65% / 6); }
         .fai-chun.vertical .char-count-7 .char-wrapper { height: calc(65% / 7); }
+
+        .fai-chun.horizontal .fai-chun-text {
+              align-items: center;
+              height: 100%;
+              width: 100%;
+          }
+          .fai-chun.horizontal .char-wrapper {
+              width: 10rem;
+              height: 10rem;
+              flex-shrink: 1;
+              flex-grow: 0;
+              min-width: 0;
+          }
+          .fai-chun.horizontal .char-wrapper img {
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+          }
 
         /* --- Horizontal Sizing (Fixed 'rem' Size with Shrinking) --- */
         .fai-chun.horizontal .char-wrapper {
