--- a/index.html
+++ b/index.html
@@ -1422,7 +1422,7 @@
                 // This logic overrides your static CSS to handle dynamic padding and fix save issues.
                 if (orientation === 'vertical' && characters.length > 0) {
                     // FIX for Vertical Overflow & Squishing:
-                    wrapperDiv.style.height = '10%';
+                    wrapperDiv.style.flexBasis = '10%';
                     // Prevent flexbox from shrinking the item, giving html2canvas a stable height.
                     wrapperDiv.style.flexShrink = '0';
                 } else {
