--- a/index.html
+++ b/index.html
@@ -1477,6 +1477,8 @@
                     // FIX for Horizontal Overflow:
                     // Set a minimum width of 0, which allows the item to shrink
                     // below its fixed 10rem size when padding is added.
+                    wrapperDiv.style.width = '10%';
+                    wrapperDiv.style.height = '35%';
                     wrapperDiv.style.minWidth = '0';
                 }
                 wrapperDiv.appendChild(img);
