--- a/index.html
+++ b/index.html
@@ -1479,7 +1479,8 @@
                     // below its fixed 10rem size when padding is added.
                     wrapperDiv.style.width = '13.5%';
                     wrapperDiv.style.height = '50%';
-                    wrapperDiv.style.minWidth = '0';
+                    wrapperDiv.style.minWidth = '0.5rem';
+                    wrapperDiv.style.minHeight = '2rem';
                 }
                 wrapperDiv.appendChild(img);
                 imageContainer.appendChild(wrapperDiv);
