--- a/index.html
+++ b/index.html
@@ -1478,7 +1478,7 @@
                     // Set a minimum width of 0, which allows the item to shrink
                     // below its fixed 10rem size when padding is added.
                     wrapperDiv.style.width = '13.5%';
-                    wrapperDiv.style.height = '30%';
+                    wrapperDiv.style.flexBasis = '39%';
                     wrapperDiv.style.minWidth = '0.5rem';
                     wrapperDiv.style.minHeight = '2rem';
                 }
