--- a/index.html
+++ b/index.html
@@ -1469,15 +1469,15 @@
                 if (orientation === 'vertical' && characters.length > 0) {
                     // FIX for Vertical Overflow & Squishing:
                     wrapperDiv.style.flexBasis = '10%';
-                    wrapperDiv.style.width = '35%';
+                    wrapperDiv.style.width = '95%';
                     // Prevent flexbox from shrinking the item, giving html2canvas a stable height.
                     wrapperDiv.style.flexShrink = '0';
                 } else {
                     // FIX for Horizontal Overflow:
                     // Set a minimum width of 0, which allows the item to shrink
                     // below its fixed 10rem size when padding is added.
-                    wrapperDiv.style.width = '13.5%';
-                    wrapperDiv.style.flexBasis = '39%';
+                    wrapperDiv.style.height = '95%';
+                    wrapperDiv.style.flexBasis = '10%';
                     wrapperDiv.style.minWidth = '0.5rem';
                     wrapperDiv.style.minHeight = '2rem';
                 }
